[package]
name = "wark"
description = "WebAssembly RunKit."
version = "0.2.5"
keywords = ["wasm", "wasm-oj"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/wasm-oj/wark"
repository = "https://github.com/wasm-oj/wark"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wark"
path = "src/main.rs"

[lib]
name = "wark"
path = "src/lib.rs"

[dependencies]
async-compression = { version = "0.4.0", features = ["tokio", "gzip"] }
async-trait = "0.1.68"
base64 = "0.21.0"
clap = { version = "4.2.7", features = ["derive", "string"] }
http-cache-reqwest = { version = "0.9.0", features = ["manager-cacache", "manager-moka"] }
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls", "tokio-rustls", "json"] }
reqwest-middleware = "0.2.2"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = "1.0.163"
serde_json = "1.0.96"
sha256 = "1.1.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
wasmer = "3.3.0"
wasmer-types = "3.3.0"
wasmer-wasix = "0.4.0"

[build-dependencies]
vergen = { version = "8.1.3", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }

[patch.crates-io]
reflink = { git = "https://github.com/JacobLinCool/reflink.git" }
